# hpc-connect

./: .gitignore  .gitlab-ci.yml  COPYRIGHT  LICENSE  README.md  pre-commit  pyproject.toml
.github/workflows/: publish.yml  workflow.yml
docker/flux/: Dockerfile  README.md  test.sh
docker/pbs/: test.sh
docker/slurm/: Dockerfile  README.md  entrypoint.sh  slurm.conf.in  slurmdbd.conf  test.sh
src/hpc_connect/: __init__.py  __main__.py  _launch.py  backend.py  config.py  discover.py  futures.py  hookspec.py  job.py  jobspec.py  launch.py  local.py  logging.py  mpi.py  mpi_launch.py  pluginmanager.py  process.py  schemas.py  shell.sh.in  shell_submit.py  submit.py  types.py  util.py  version.py
src/hpc_connect/command/: __init__.py  config.py  launch.py  submit.py
src/hpc_connect/impl/: __init__.py  flux_api.py  flux_hl.py  launch.py  mpi.py  pbs.py  shell.py  slurm.py  srun.py
src/hpc_connect/launch/: __init__.py  base.py  srun.py
src/hpc_connect/submit/: __init__.py  base.py  flux_api.py  flux_hl.py  pbs.py  shell.py  slurm.py
src/hpc_connect/templates/: base.sh.in  flux.sh.in  hpcc-submit.sh.in  pbs.sh.in  shell.sh.in  slurm.sh.in
src/hpc_connect/util/: __init__.py  collections.py  dynamic_version.py  proc.py  serialize.py  string.py  tengine.py  time.py
src/hpcc_flux/: __init__.py  backend.py  backend_api.py  backend_hl.py  discover.py  process.py  submit_api.py  submit_hl.py
src/hpcc_flux/templates/: submit.sh.in
src/hpcc_mpi/: __init__.py  launch.py
src/hpcc_pbs/: __init__.py  backend.py  discover.py  process.py  submit.py
src/hpcc_pbs/templates/: submit.sh.in
src/hpcc_remote/: __init__.py  backend.py  process.py  submit.py
src/hpcc_remote/templates/: submit.sh.in
src/hpcc_slurm/: __init__.py  backend.py  discover.py  launch.py  process.py  submit.py
src/hpcc_slurm/templates/: submit.sh.in
src/hpcc_subprocess/: __init__.py  backend.py  process.py  submit.py
tests/: basic.pyt  config.py  conftest.py  launch.py  pbs.py  run-tests-under-flux.sh  slurm.py  test_hpcc_slurm_discover.py
tests/mock/: pbsnodes  qstat  qsub  sacct  sbatch  sinfo
